# pybind11-vision-bench

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_and_benchmark.sh  docker-compose.yml  pyproject.toml  requirements.txt  run_benchmark.py  setup.py  sobel_optim_beamer.tex
sobel/: __init__.py
src/: sobel.cpp
tests/: compare_sobel.py
